--- a/.github/workflows/optimize-nutrition.yml
+++ b/.github/workflows/optimize-nutrition.yml
@@ -16,6 +16,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0  # Fetch all history for all branches and tags
+        token: ${{ secrets.PAT_TOKEN }}
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -42,9 +43,11 @@ jobs:
         git status --porcelain
         echo "changes=$(git status --porcelain | wc -l)" >> $GITHUB_OUTPUT
 
-    - name: Commit and push if changes exist
+        - name: Commit and push if changes exist
       if: steps.git-check.outputs.changes > 0
       run: |
-        git add recipes/* README.md optimization_history.csv
+        git add results/* index.md optimization_history.csv
         git commit -m "Auto-generate new meal plan [skip ci]"
-        git push
+        git push origin main
+      env:
+        GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
