--- a/.github/workflows/optimize-nutrition.yml
+++ b/.github/workflows/optimize-nutrition.yml
@@ -2,9 +2,9 @@ name: Optimize Nutrition
 
 on:
   workflow_dispatch:  # Manual trigger
-  push:
-    branches:
-      - main  # or master, depending on your default branch name
+  # push:
+  #   branches:
+  #     - main  # or master, depending on your default branch name
   schedule:
     - cron: '0 * * * *'  # Run every hour
 
