Switch cron to every 2 hours
jobs are doubling up and failing because job is taking longer than 1 hour, increasing job to run every 2 hours

--- a/.github/workflows/optimize-nutrition.yml
+++ b/.github/workflows/optimize-nutrition.yml
@@ -3,7 +3,7 @@ name: Optimize Nutrition
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 * * * *'  # Run every hour
+    - cron: '0 */2 * * *' # Run every 2 hours
 
 jobs:
   optimize:
